(OH2-304) Refactor code
